--- a/package.json
+++ b/package.json
@@ -4,24 +4,59 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --mode production --config webpack.config.js",
+    "lint": "eslint src --fix",
+    "start:dev": "nodemon src/server/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.14.3",
+    "@babel/preset-env": "^7.14.4",
+    "@babel/preset-react": "^7.13.13",
+    "@babel/register": "^7.13.16",
+    "@types/express": "^4.17.12",
+    "asset-require-hook": "^1.2.0",
+    "babel-loader": "^8.2.2",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "ignore-styles": "^5.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hot-loader": "^4.13.0",
     "react-router": "^5.2.0",
+    "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.0",
+    "ts-loader": "^9.2.3",
     "webpack": "^5.38.1",
-    "webpack-cli": "^4.7.0"
+    "webpack-cli": "^4.7.0",
+    "webpack-dev-middleware": "^5.0.0",
+    "webpack-hot-middleware": "^2.25.0"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.13.0",
     "@types/react": "^17.0.9",
     "@types/react-dom": "^17.0.6",
     "@types/react-router": "^5.1.14",
+    "@types/react-router-config": "^5.0.2",
     "@types/react-router-dom": "^5.1.7",
+    "@types/webpack-dev-middleware": "^5.0.0",
+    "@types/webpack-hot-middleware": "^2.25.4",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "eslint": "^7.28.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
+    "node-sass": "^6.0.0",
+    "nodemon": "^2.0.7",
+    "prettier": "^2.3.1",
+    "sass-loader": "^12.0.0",
+    "style-loader": "^2.0.0",
+    "ts-node": "^10.0.0",
     "typescript": "^4.3.2"
   }
 }
