--- a/.babelrc
+++ b/.babelrc
@@ -3,5 +3,10 @@
     "@babel/preset-env",
     "@babel/preset-react",
     "@babel/preset-typescript"
+  ],
+  "plugins": [
+    "babel-plugin-transform-class-properties",
+    "@babel/plugin-transform-runtime",
+    "react-hot-loader/babel"
   ]
 }
