--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-loader": "^8.2.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "history": "^5.0.0",
     "ignore-styles": "^5.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -35,6 +36,7 @@
     "webpack-hot-middleware": "^2.25.0"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.14.3",
     "@babel/preset-typescript": "^7.13.0",
     "@types/react": "^17.0.9",
     "@types/react-dom": "^17.0.6",
@@ -43,6 +45,7 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/webpack-dev-middleware": "^5.0.0",
     "@types/webpack-hot-middleware": "^2.25.4",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "eslint": "^7.28.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -51,6 +54,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
+    "mini-css-extract-plugin": "^1.6.0",
     "node-sass": "^6.0.0",
     "nodemon": "^2.0.7",
     "prettier": "^2.3.1",
