--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "webpack --mode production --config webpack.config.js",
     "lint": "eslint src --fix",
-    "start:dev": "nodemon src/server/server.ts"
+    "dev": "nodemon src/server/server.ts"
   },
   "keywords": [],
   "author": "",
