--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "webpack --mode production --config webpack.config.js",
     "lint": "eslint src --fix",
-    "dev": "nodemon src/server/server.ts"
+    "dev": "nodemon src/server/server.ts",
+    "dev:inspect": "nodemon --inspect src/server/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,7 @@
     "@babel/register": "^7.13.16",
     "@types/express": "^4.17.12",
     "asset-require-hook": "^1.2.0",
+    "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
