--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "typeRoots": ["node_modules/@types", "src/types"],
+    "typeRoots": ["node_modules/@types/*", "src/@types/*"],
     "outDir": "dist",
     "target": "es2019",
     "module": "commonjs",
@@ -17,7 +17,8 @@
     "paths": {
       "@src/*": ["./src/*"],
       "@assets/*": ["./src/assets/*"],
-      "@components/*": ["./src/components/*"]
+      "@components/*": ["./src/components/*"],
+      "@utils/*": ["./src/utils/*"]
     },
     // Ensure that .d.ts files are created by tsc, but not .js files
     "declaration": true,
