--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
-    "typeRoots": ["node_modules/@types/*", "src/@types/*"],
     "outDir": "dist",
     "target": "es2019",
+    "typeRoots": ["./src/types"],
     "module": "commonjs",
     "jsx": "react",
     "noImplicitAny": true,
@@ -15,16 +15,18 @@
     "esModuleInterop": true,
     "noEmit": false,
     "paths": {
-      "@src/*": ["./src/*"],
+      "*": ["node_modules/*", "src/types/*"],
       "@assets/*": ["./src/assets/*"],
       "@components/*": ["./src/components/*"],
+      "@containers/*": ["./src/containers/*"],
       "@utils/*": ["./src/utils/*"]
     },
+    "types": ["reflect-metadata", "node"],
     // Ensure that .d.ts files are created by tsc, but not .js files
     "declaration": true,
     "emitDeclarationOnly": true
     // Ensure that Babel can safely transpile files in the TypeScript project
     // "isolatedModules": true
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx"]
+  "include": ["src/**/*", "src/**/*.json"]
 }
