--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "sass-loader": "^12.0.0",
     "style-loader": "^2.0.0",
     "ts-node": "^10.0.0",
-    "typescript": "^4.3.2"
+    "typescript": "^4.3.2",
+    "url-loader": "^4.1.1"
   }
 }
