--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "outDir": "dist",
-    "target": "es2019",
+    "target": "es2020",
     "typeRoots": ["./src/types"],
     "module": "commonjs",
     "jsx": "react",
@@ -15,7 +15,7 @@
     "esModuleInterop": true,
     "noEmit": false,
     "paths": {
-      "*": ["node_modules/*", "src/types/*"],
+      "*": ["src/types/*"],
       "@assets/*": ["./src/assets/*"],
       "@components/*": ["./src/components/*"],
       "@containers/*": ["./src/containers/*"],
@@ -28,5 +28,6 @@
     // Ensure that Babel can safely transpile files in the TypeScript project
     // "isolatedModules": true
   },
-  "include": ["src/**/*", "src/**/*.json"]
+  "include": ["src/**/*", "src/**/*.json", "src/types/*"],
+  "exclude": ["dist", "build", "node_modules"]
 }
