feat: update .env.example file

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,10 @@
 ## SERVER SET UP
 SERVER_PORT="3004"
 NODE_ENV="development"
+
+## MERCADO LIBRE API
+ML_API_URL=""
+
+## AUTHOR
+AUTHOR_NAME=""
+AUTHOR_LASTNAME=""
