--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production --config webpack.config.js",
+    "start": "ts-node dist/main-bundle.js",
     "lint": "eslint src --fix",
     "dev": "nodemon src/server/server.ts",
     "dev:inspect": "nodemon --inspect src/server/server.ts"
@@ -23,6 +24,7 @@
     "babel-loader": "^8.2.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "helmet": "^4.6.0",
     "history": "^5.0.0",
     "ignore-styles": "^5.0.1",
     "intersection-observer": "^0.12.0",
@@ -42,6 +44,7 @@
     "@babel/plugin-transform-runtime": "^7.14.3",
     "@babel/preset-typescript": "^7.13.0",
     "@hot-loader/react-dom": "^17.0.1",
+    "@types/helmet": "^4.0.0",
     "@types/react": "^17.0.9",
     "@types/react-dom": "^17.0.6",
     "@types/react-router": "^5.1.14",
@@ -51,6 +54,7 @@
     "@types/webpack-hot-middleware": "^2.25.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "compression-webpack-plugin": "^8.0.0",
     "css-loader": "^5.2.6",
     "eslint": "^7.28.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -70,6 +74,7 @@
     "style-loader": "^2.0.0",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.2",
-    "url-loader": "^4.1.1"
+    "url-loader": "^4.1.1",
+    "webpack-manifest-plugin": "^3.1.1"
   }
 }
