--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "node-sass": "^6.0.0",
     "nodemon": "^2.0.7",
     "prettier": "^2.3.1",
+    "robotstxt-webpack-plugin": "^7.0.0",
     "sass-loader": "^12.0.0",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.1.3",
