--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines" : { "node" : ">=14.16.0", "npm": ">=6.0.0" },
   "scripts": {
     "build": "webpack --mode production --config webpack.config.js",
     "start": "nodemon src/server/server.ts",
