--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "engines" : { "node" : "14.x", "npm": "6.x" },
+  "engines" : { "node" : "14.x", "yarn": "1.x" },
   "scripts": {
     "build": "webpack --mode production --config webpack.config.js",
     "start": "nodemon src/server/server.ts",
