--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "yarn": "1.x"
   },
   "scripts": {
-    "build-ts": "tsc",
+    "build-ts": "tsc -p tsconfig.json",
     "postinstall": "npm run build-ts",
     "start": "npm run serve",
-    "serve": "node dist/server.js",
+    "serve": "node dist/server/server.js",
     "watch-node": "nodemon dist/server.js",
     "build": "webpack --mode production --config webpack.config.js",
     "lint": "eslint src --fix",
@@ -53,11 +53,13 @@
     "@babel/preset-typescript": "^7.13.0",
     "@hot-loader/react-dom": "^17.0.1",
     "@types/helmet": "^4.0.0",
+    "@types/history": "^4.7.8",
     "@types/react": "^17.0.9",
     "@types/react-dom": "^17.0.6",
     "@types/react-router": "^5.1.14",
     "@types/react-router-config": "^5.0.2",
     "@types/react-router-dom": "^5.1.7",
+    "@types/reflect-metadata": "^0.1.0",
     "@types/webpack-dev-middleware": "^5.0.0",
     "@types/webpack-hot-middleware": "^2.25.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -87,5 +89,8 @@
     "typescript": "^4.3.2",
     "url-loader": "^4.1.1",
     "webpack-manifest-plugin": "^3.1.1"
+  },
+  "resolutions": {
+    "@types/react": "16.3.8"
   }
 }
