--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "outDir": "dist",
     "target": "es2020",
-    "typeRoots": ["./src/types"],
+    // "typeRoots": ["./src/types", "node_modules/types"],
     "module": "commonjs",
     "jsx": "react",
     "noImplicitAny": true,
@@ -13,9 +13,8 @@
     "strict": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
-    "noEmit": false,
     "paths": {
-      "*": ["node_modules/*", "src/types/*"],
+      "*": ["./node_modules/@types/*", "*"]
       // "@assets/*": ["./src/assets/*"],
       // "@components/*": ["./src/components/*"],
       // "@containers/*": ["./src/containers/*"],
@@ -24,10 +23,9 @@
     "types": ["reflect-metadata", "node"],
     // Ensure that .d.ts files are created by tsc, but not .js files
     "declaration": true,
-    "emitDeclarationOnly": true
+    // "emitDeclarationOnly": true
     // Ensure that Babel can safely transpile files in the TypeScript project
     // "isolatedModules": true
   },
-  "include": ["src/**/*", "src/**/*.json", "src/types/*"],
-  "exclude": ["dist", "build", "node_modules"]
+  "include": ["src/**/*", "src/**/*.json"]
 }
