--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,5 +28,11 @@
     // Ensure that Babel can safely transpile files in the TypeScript project
     // "isolatedModules": true
   },
-  "include": ["src/**/*.tsx", "src/**/*.ts", "src/**/*.json"]
+  "include": [
+    "src/**/*.tsx",
+    "src/**/*.ts",
+    "src/**/**/*.ts",
+    "src/**/**/*.tsx",
+    "src/**/*.json"
+  ]
 }
